tests/cases/conformance/decorators/invalid/decoratorOnAwait.ts
// @target: es2015
declare function dec<T>(target: T): T;

@dec
await 1
